# build-recorder

./: .gitignore  .indent.pro  CONTRIBUTING.md  Makefile.am  README.md  build-recorder.out  configure.ac
benchmark/: Makefile.am  benchmark.awk
doc/: build-recorder-schema.ttl  output.md
examples/: Makefile  Makefile.am  f2.c
man/: build-recorder.1
src/: Makefile.am  algorithms.c  algorithms.h  hash.c  hash.h  hashmap.c  hashmap.h  main.c  portable_error.c  portable_error.h  record.c  record.h  threadpool.c  threadpool.h  tracer.c  tracer.h  types.c  types.h  vector.h
test/: Makefile  Makefile.am  f3.c  f4.c  testread.c
